Remove redundant checks